set footer overal styles fix layout spacing add social icons hover effect

--- a/src/styles/components/_feed.scss
+++ b/src/styles/components/_feed.scss
@@ -1,5 +1,5 @@
 .c-section--feed {
-    padding: 5em;
+    // padding: 5em;
 }
 
 .c-feed {
