--- a/src/styles/components/_join.scss
+++ b/src/styles/components/_join.scss
@@ -1,5 +1,5 @@
 .c-section--join {
-    margin-bottom: 10em;
+    // margin-bottom: 4em;
 }
 
 .c-join {
