--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -2,7 +2,7 @@
     text-transform: uppercase;
     letter-spacing: .62em;
     font-family: $league;
-    @include font-size(12px);
+    @include font-size(9px);
     display: flex;
     gap: 5em;
 }
