--- a/src/styles/components/_quote.scss
+++ b/src/styles/components/_quote.scss
@@ -2,7 +2,6 @@
     text-align: center;
     color: #333;
     opacity: 90%;
-    margin: 10em auto;
 }
 
 .c-quote__text {
