--- a/src/styles/elements/_defaults.scss
+++ b/src/styles/elements/_defaults.scss
@@ -24,3 +24,8 @@ a {
 img {
   max-width: 100%;
 }
+
+button {
+  transition: 0.2s;
+  cursor: pointer;
+}
